--- a/index.html
+++ b/index.html
@@ -17,16 +17,10 @@
         	<h1>a.hazlett</h1>
         </div>
 		<div class="container">      			
-			<a href="http://pasttensedraw.tumblr.com"><div class="social tumblr">
-				<img src="soc/tu.png" />
-			</div></a>
-			<a href="https://www.linkedin.com/profile/view?id=61384435" target="_blank"><div class="social linkedin">
-				<img src="soc/li.png" />
-			</div></a>
 			<a href="http://instagram.com/pasttensedraws"><div class="social instagram">
 				<img src="soc/in.png" />
 			</div></a>
-			<a href="mailto:hazlet26@gmail.com"><div class="social email">
+			<a href="mailto:drewboogs@gmail.com"><div class="social email">
 				<img src="soc/em.png" />
 			</div></a>
 		</div>
