--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
 
         <div class="header respond">
-        	<h1>a.hazlett</h1>
+        	<h1>Drewbie's Garden</h1>
         </div>
 		<div class="container">      			
 			<a href="http://instagram.com/pasttensedraws"><div class="social instagram">
