--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Andrew Hazlett</title>
+        <title>Drewbie's Garden</title>
         <meta name="description" content="and all that that entails.">
         <meta name="viewport" content="width=device-width">
 
