--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 		</div>
 		<div class="clear"></div>
 		
+		<p style="font-size: 20px; color:#1F9AFE;">
+		<a href="Webpage_FilePath">About</a>
+		</p>
+		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
  
 		<script src="jquery.fittext.js"></script>
