--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="clear"></div>
 		
 		<p style="font-size: 20px; color:#1F9AFE;">
-		<a href="Webpage_FilePath">About</a>
+		<a href="about">About</a>
 		</p>
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
