--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 		<div class="clear"></div>
 		
 		<p style="font-size: 20px; color:#1F9AFE;">
-		<a href="/about">About</a>
+		
+		<a href="/">Home</a>
+		<a href="/about">about</a>
 		</p>
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
