--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 		
 		<p style="font-size: 20px; color:#1F9AFE;">
 		
-		<a href="/">Home</a>
-		<a href="/about">about</a>
+		<a href="about">about</a>
 		</p>
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
