--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 				<img src="soc/em.png" />
 			</div></a>
 		</div>
+		
 		<div class="clear"></div>
 		
 		<p style="font-size: 20px; color:#1F9AFE;">
-		
-		<a href="about">about</a>
+		<div class="container">
+			<a href="about">About</a>
+		</div>
 		</p>
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
