--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 		<p style="font-size: 20px; color:#1F9AFE;">
 		<div class="container">
 			<a href="about">About</a>
+			<br>		
+			<a href="drewnotes">Drew's Notes</a>
+			<br>
+			<a href="personal">Personal Collection</a>
+			<br>
+			<a href="linkpage">Links to Cacti Sites</a>
 		</div>
 		</p>
 		
