--- a/about/index.html
+++ b/about/index.html
@@ -4,28 +4,14 @@
 </div>
 
 <h2 style="text-align:center">The Team</h2>
-<div class="row">
-  <div class="column">
-    <div class="card">
-      <img src="/w3images/team1.jpg" alt="Drew" style="width:100%">
-      <div class="container">
-        <h2>Drew</h2>
-        <p class="title">Head of Gardening</p>
-        <p>Plants.</p>
-        <p>drew@drewbiesgarden.com</p>
-      </div>
-    </div>
-  </div>
-  
-  
   <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/w3images/team1.jpg" alt="Nancy" style="width:100%">
+      <img src="/about/nancy.jpg" alt="Nancy" style="width:100%">
       <div class="container">
         <h2>Nancy</h2>
         <p class="title">Head of Squirrel Chasing</p>
-        <p>Plants.</p>
+        <p>Plants guardian.</p>
         <p>nancy@drewbiesgarden.com</p>
       </div>
     </div>
