--- a/linkpage/index.html
+++ b/linkpage/index.html
@@ -1,25 +1,58 @@
 <div class="linkpage">
-  <h1>Links to Cactus Sale Sites</h1>
-  Trichocereus plants: <br>
-  <a href="sacredsucculents.com">Sacred Succulents</a> <br>
-  <a href="geebeesgarden.com">Geebee's Garden</a> <br>
-  <a href="totalpricknursery.com">Total Prick Nursury</a> <br>
-  <a href="earthwaysnursery.com">Earthways Nursury</a> <br>
-  <a href="https://trichemer.com/">Trichemer Gardens </a> <br>
-  <br>
-  Trichocereus seed: <br>
-  <a href="misplant.net">Misplant</a> <br>
-  <br>
+  <h1>Links to Cactus Vendor Sites</h1>
   Cactus seed: <br>
-  <a href="https://www.canddplants.com/">C and d Plants</a> <br>
   <a href="https://mesagarden.com/">Mesa Gardens</a> <br>
+  One of the best vendors for many types of cactus and succulent seed.
+  <a href="https://www.canddplants.com/">C and d Plants</a> <br>
+  Vendor for cactus and succulent seed.
+  <br>
+  <a href="misplant.net">Misplant</a> <br>
+  Extensive list of Trichocereus hybrid seeds and some other cactus seeds.
   <br>
   Cactus plants: <br>
   <a href="https://www.miles2go.com/">Miles2Go</a> <br>
+  Plants are available at certain times of the year. Get on their email or mailing list to know when.<br>
   <a href="https://starr-nursery.com/">Starr-Nursury</a> <br>
-  
+  Mail order cactus and succulent Nursury.
+  <a href="https://shop.hotcactus.la/collections/plants">Hot Cactus LA</a> <br>
+  Retail store in Los Angeles and New York that does some online sales. Rare plants, but they can be more expensive then other vendors. <br>
+  <br>
+  Trichocereus plants: <br>
+  <a href="https://cactusaffinity.com/">Cactus Affinity </a> <br>
+  Mail order nursery in Northern California specializing in Trichocereus cactus.
+  <a href="sacredsucculents.com">Sacred Succulents</a> <br>
+  Plants are available at certain times of the year. Get on their email list to know when.<br>
+  <a href="geebeesgarden.com">Geebee's Garden</a> <br>
+  Plants are available at certain times of the year. Get on their email list to know when.<br>
+  <a href="https://thesucculentsource.com/">The Succulent Source </a> <br>
+  Mail order nursery in Southern California.
+  <a href="totalpricknursery.com">Total Prick Nursury</a> <br>
+  Mail order nursery out of Oakland, CA specializing in Trichocereus cactus.
+  <a href="earthwaysnursery.com">Earthways Nursury</a> <br>
+  Mail order nursery specializing in Trichocereus cactus.
+  <a href="trichemer.com">Trichemer Gardens </a> <br>
+  Mail order nursery specializing in Trichocereus cactus.
+    <a href="https://cocac.net/">COCAC </a> <br>
+  Mail order nursery specializing in Trichocereus cactus.
+  <br>
+  Facebook/Instagram/eBay US Vendors:<br>
+  FB: lovesucculents<br>
+  Plant importer from Asia and Europe.<br>
+  <br>
+  IG: sunbird_cactus<br>
+  Mail order vendor with rare cactus. <br>
+  <br>
+  eBay: bodombilly<br>
+  Avid grafter who propagates and sells many rare cactus/succulents.<br>
+  <br>
+  eBay: plantaseca<br>
+  Seller in the SF Bay area, a vendor for the California cactus and succulent societies.<br>
+  <br>
+  eBay: teedeecacti<br>
+  Vendor of many rare seed grown cactus. <br>
+  <br>
+  <br>
   <h1>Links to Cactus Info Sites</h1>
- 
   Cactus grafting: <br>
   <a href="http://www.kadasgardens.com/">Kadas Garden (Taiwan)</a> <br>
   
