--- a/linkpage/index.html
+++ b/linkpage/index.html
@@ -1,47 +1,45 @@
 <div class="linkpage">
   <h1>Links to Cactus Vendor Sites</h1>
-  Cactus seed: <br>
+  <strong>Cactus seed:</strong> <br><br>
   <a href="https://mesagarden.com/">Mesa Gardens</a> <br>
-  One of the best vendors for many types of cactus and succulent seed.
+  Vendor with an extensive list of cactus and succulent seed.<br><br>
   <a href="https://www.canddplants.com/">C and d Plants</a> <br>
   Vendor for cactus and succulent seed.
-  <br>
+  <br><br>
   <a href="misplant.net">Misplant</a> <br>
-  Extensive list of Trichocereus hybrid seeds and some other cactus seeds.
-  <br>
-  Cactus plants: <br>
+  Extensive list of Trichocereus hybrid seeds and some other cactus seeds.<br>
+  <br><br>
+  <strong>Cactus plants:</strong> <br><br>
   <a href="https://www.miles2go.com/">Miles2Go</a> <br>
-  Plants are available at certain times of the year. Get on their email or mailing list to know when.<br>
+  Plants are available at certain times of the year. Get on their email or mailing list to know when.<br><br>
   <a href="https://starr-nursery.com/">Starr-Nursury</a> <br>
-  Mail order cactus and succulent Nursury.
+  Mail order cactus and succulent Nursury.<br><br>
   <a href="https://shop.hotcactus.la/collections/plants">Hot Cactus LA</a> <br>
   Retail store in Los Angeles and New York that does some online sales. Rare plants, but they can be more expensive then other vendors. <br>
-  <br>
-  Trichocereus plants: <br>
+  <br><br>
+  <strong>Trichocereus cactus:</strong> <br><br>
   <a href="https://cactusaffinity.com/">Cactus Affinity </a> <br>
-  Mail order nursery in Northern California specializing in Trichocereus cactus.
+  Mail order nursery in Northern California specializing in Trichocereus cactus.<br><br>
   <a href="sacredsucculents.com">Sacred Succulents</a> <br>
-  Plants are available at certain times of the year. Get on their email list to know when.<br>
+  Plants are available at certain times of the year. Get on their email list to know when.<br><br>
   <a href="geebeesgarden.com">Geebee's Garden</a> <br>
-  Plants are available at certain times of the year. Get on their email list to know when.<br>
+  Plants are available at certain times of the year. Get on their email list to know when.<br><br>
   <a href="https://thesucculentsource.com/">The Succulent Source </a> <br>
-  Mail order nursery in Southern California.
+  Mail order nursery in Southern California.<br><br>
   <a href="totalpricknursery.com">Total Prick Nursury</a> <br>
-  Mail order nursery out of Oakland, CA specializing in Trichocereus cactus.
+  Mail order nursery out of Oakland, CA specializing in Trichocereus cactus.<br><br>
   <a href="earthwaysnursery.com">Earthways Nursury</a> <br>
-  Mail order nursery specializing in Trichocereus cactus.
+  Mail order nursery specializing in Trichocereus cactus.<br><br>
   <a href="trichemer.com">Trichemer Gardens </a> <br>
-  Mail order nursery specializing in Trichocereus cactus.
+  Mail order nursery specializing in Trichocereus cactus.<br><br>
     <a href="https://cocac.net/">COCAC </a> <br>
-  Mail order nursery specializing in Trichocereus cactus.
-  <br>
-  Facebook/Instagram/eBay US Vendors:<br>
+  Mail order nursery specializing in Trichocereus cactus.<br><br>
+  <br><br>
+  <strong>Facebook/Instagram/eBay US Vendors:</strong><br><br>
   FB: lovesucculents<br>
-  Plant importer from Asia and Europe.<br>
-  <br>
+  Plant importer from Asia and Europe.<br><br>
   IG: sunbird_cactus<br>
-  Mail order vendor with rare cactus. <br>
-  <br>
+  Mail order vendor with rare cactus. <br><br>
   eBay: bodombilly<br>
   Avid grafter who propagates and sells many rare cactus/succulents.<br>
   <br>
@@ -50,13 +48,21 @@
   <br>
   eBay: teedeecacti<br>
   Vendor of many rare seed grown cactus. <br>
-  <br>
-  <br>
-  <h1>Links to Cactus Info Sites</h1>
-  Cactus grafting: <br>
-  <a href="http://www.kadasgardens.com/">Kadas Garden (Taiwan)</a> <br>
-  
   <br><br>
-  <font size="1">updated: 7/22/2021</font>
+  <strong>Note on International Vendors</strong><br>
+  Many cactus/succulent plant and seed vendors exist abroad. It’s common to see plants from China, Ukraine, Spain, etc on eBay for cheap prices. A phytosanitary certificate, CITES certificate and USDA plant import permit is required to clear US customs. Without these permits the plants will be confiscated and destroyed, and you will receive the empty box. Thus, this list includes only US vendors.
+  <br><br>
+  <h1>Links to Cactus Info Sites</h1>
+  <a href="https://www.cactiguide.com/">Cacti Guide</a> <br>
+  Informative website on cactus taxonomy and useful information
+  <br><br>
+  <a href="https://www.cactiguide.com/forum/">Cacti Guide Forum</a> <br>
+  A forum about all things related to cactus. You can search the forum to find extensive information on just about anything to do with cactus. The forum still has regular activity, but note it can take months to hear a response for opening a new account to participate in the forum. 
+  <br><br>
+  <a href="http://www.kadasgardens.com/">Kadas Garden (Taiwan)</a> <br>
+  Informative website on growing cactus with grafting stock compatibility charts, and other information. 
+  <br><br>
+
+  <font size="1">updated: 7/30/2021</font>
 </div>
 
