--- a/linkpage/index.html
+++ b/linkpage/index.html
@@ -3,7 +3,7 @@
   <strong>Cactus seed:</strong> <br><br>
   <a href="https://mesagarden.com/">Mesa Gardens</a> <br>
   Vendor with an extensive list of cactus and succulent seed.<br><br>
-  <a href="https://www.canddplants.com/">C and d Plants</a> <br>
+  <a href="https://www.canddplants.com/">C and D Plants</a> <br>
   Vendor for cactus and succulent seed.
   <br><br>
   <a href="misplant.net">Misplant</a> <br>
@@ -49,6 +49,7 @@
   eBay: teedeecacti<br>
   Vendor of many rare seed grown cactus. <br>
   <br><br>
+  <strong>Many other great vendors exist! I've done business with the vendors listed here and they are recommended. The list is a work in progress.</strong><br><br>
   <strong>Note on International Vendors</strong><br>
   Many cactus/succulent plant and seed vendors exist abroad. It’s common to see plants from China, Ukraine, Spain, etc on eBay for cheap prices. A phytosanitary certificate, CITES certificate and USDA plant import permit is required to clear US customs. Without these permits the plants will be confiscated and destroyed, and you will receive the empty box. Thus, this list includes only US vendors.
   <br><br>
