--- a/linkpage/index.html
+++ b/linkpage/index.html
@@ -13,7 +13,7 @@
   <a href="https://www.miles2go.com/">Miles2Go</a> <br>
   Plants are available at certain times of the year. Get on their email or mailing list to know when.<br><br>
   <a href="https://starr-nursery.com/">Starr-Nursury</a> <br>
-  Mail order cactus and succulent Nursury.<br><br>
+  Mail order cactus and succulent nursury.<br><br>
   <a href="https://shop.hotcactus.la/collections/plants">Hot Cactus LA</a> <br>
   Retail store in Los Angeles and New York that does some online sales. Rare plants, but they can be more expensive then other vendors. <br>
   <br><br>
