--- a/linkpage/index.html
+++ b/linkpage/index.html
@@ -35,11 +35,15 @@
     <a href="https://cocac.net/">COCAC </a> <br>
   Mail order nursery specializing in Trichocereus cactus.<br><br>
   <br><br>
-  <strong>Facebook/Instagram/eBay US Vendors:</strong><br><br>
+  <strong>Facebook/Instagram/Etsy/eBay US Vendors:</strong><br><br>
   FB: lovesucculents<br>
   Plant importer from Asia and Europe.<br><br>
   IG: sunbird_cactus<br>
   Mail order vendor with rare cactus. <br><br>
+  Etsy: TanasquiGardens<br>
+  Mail order vendor with many types of Asclepiads. <br><br>
+  Etsy: LASucculents<br>
+  Mail order vendor with cactus and Asclepiads. <br><br>
   eBay: bodombilly<br>
   Avid grafter who propagates and sells many rare cactus/succulents.<br>
   <br>
