--- a/linkpage/index.html
+++ b/linkpage/index.html
@@ -51,7 +51,10 @@
   Seller in the SF Bay area, a vendor for the California cactus and succulent societies.<br>
   <br>
   eBay: teedeecacti<br>
-  Vendor of many rare seed grown cactus. <br>
+  Vendor of many rare seed grown cactus. <br><br>
+  FB Group: <a href="https://www.facebook.com/groups/754723791229831">Asclepiads buy/sell/exchange (public group)</a> <br><br>
+  FB Group: <a href="https://www.facebook.com/groups/cactusbuyselltrade">Cactus - Succulents - Buy - Sell - Trade (private group)</a> <br><br>
+  FB Group: <a href="https://www.facebook.com/groups/443597765799738">Opuntiads Buy-Sell-Trade (private group)</a> <br><br>
   <br><br>
   <strong>Many other great vendors exist! I've done business with the vendors listed here and they are recommended. The list is a work in progress.</strong><br><br>
   <strong>Note on International Vendors</strong><br>
