--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Drewbie's Garden</title>
+        <title>June's Cactus</title>
         <meta name="description" content="and all that that entails.">
         <meta name="viewport" content="width=device-width">
 
@@ -14,13 +14,13 @@
     <body>
 
         <div class="header respond">
-        	<h1>Drewbie's Garden</h1>
+        	<h1>June's Cactus</h1>
         </div>
 		<div class="container">      			
-			<a href="http://instagram.com/pasttensedraws"><div class="social instagram">
+			<a href="http://instagram.com/junescactus"><div class="social instagram">
 				<img src="soc/in.png" />
 			</div></a>
-			<a href="mailto:drewboogs@gmail.com"><div class="social email">
+			<a href="mailto:junescactus@gmail.com"><div class="social email">
 				<img src="soc/em.png" />
 			</div></a>
 		</div>
