--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 		<div class="container">
 			<a href="about">About</a>
 			<br>		
-			<a href="drewnotes">Drew's Notes</a>
+			<a href="notes">Notes</a>
 			<br>
-			<a href="personal">Personal Collection</a>
+			<a href="collection/">Collection</a>
 			<br>
 			<a href="linkpage">Links to Cacti Sites</a>
 		</div>
