--- a/about/index.html
+++ b/about/index.html
@@ -7,12 +7,11 @@
   <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/about/nancy.jpeg" alt="Nancy" style="width:50%">
+      <img src="./nancy.jpeg" alt="Nancy" style="width:50%">
       <div class="container">
         <h2>Nancy</h2>
         <p class="title">Head of Squirrel Chasing</p>
-        <p>Plants guardian.</p>
-        <p>nancy@drewbiesgarden.com</p>
+        <p>Plant guardian.</p>
       </div>
     </div>
   </div>
